# Data-Structure-Project1

./: Project1 实验报告.md  README.md  byAI  byAI.cpp  byAI2.cpp  directCalcMid.cpp  expressionCalc  expressionCalc.cpp  expressionCalc.h  expressionCalcNew  expressionCalcNew.cpp  expressionCalcOld.cpp  main.cpp  mainPolynomialCalc.cpp  poly_adapter.cpp  polynomialCalc  polynomialCalc.cpp  t  test  test.cpp
一些弯路/: anothermethod  byAI  byAI2  expressionCalc(1).cpp  expressionCalc.cpp  expressionCalcNew  expressionCalcNew.cpp  main.cpp  mainPolynomialCalc.cpp  polynomial  polynomialCalc.cpp  polynomialCalc.h  t
源代码（GUI版本）/: CMakeLists.txt  expressionCalc.h  expressionCalcGUI.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  modeselectdialog.cpp  modeselectdialog.h  modeselectdialog.ui  poly_adapter.cpp  polynomialCalc.h
